Fix visibility of article cards

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -19,9 +19,9 @@
   display: flex;
   gap: 5rem;
   width: 100vw;
+  margin-left: calc(var(--padding-horizontal) * -1);
+  padding-left: var(--padding-horizontal);
   overflow-x: scroll;
-  margin-left: calc(var(--page-margin) * -1);
-  padding-left: var(--page-margin);
   padding-bottom: 1rem;
 }
 
